* 2013-12-02 - thorben.betten@open-xchange.com

 - Fix for bug 30114: Properly sanitize CSS selectors

* 2013-11-04 - tobias.friedrich@open-xchange.com

 - Fix for bug 29628: Make 'validate_contact_email' available in config tree, so it becomes visible for JSlob mapping
 
* 2013-10-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 29529: Made 'validate_contact_email' setting available via 'io.ox/core//features/validateMailAddresses'

* 2013-10-28 - thorben.betten@open-xchange.com

 - Fix for bug 29498: Check for regal RFC 822 E-Mail address prior to applying preparations for MSISDN addresses

* 2013-10-24 - thorben.betten@open-xchange.com

 - Fix for bug 29429: Use Java's naming for charset "cp932" that is "MS932"

* 2013-10-22 - thorben.betten@open-xchange.com

 - Fix for bug 29412: Escape HTML content prior to writing to output writer

* 2013-10-21 - marcus.klein@open-xchange.com

 - Fix for bug 26072: Using a master thread in a single thread executor service to create new threads for the thread pool. This ensures that
   new threads for the thread pool inherit the correct thread context classloader.

* 2013-10-10 - martin.herfurth@open-xchange.com

 - Fix for bug 29315: Avoid bad where condition

* 2013-10-07 - thorben.betten@open-xchange.com

 - Fix for bug 29147: Detect possibly harmful HTML content in image files and force attachment download then

* 2013-10-01 - thorben.betten@open-xchange.com

 - Fix for bug 29092: Deal with possible 'FLD-0003' error when collecting file storage root folders

* 2013-09-28 - thorben.betten@open-xchange.com

 - Fix for bug 29002: Keep proper emoji characters on reply/forward operation
 - Fix for bug 28933: Orderly pass empty content to message part

* 2013-09-19 - thorben.betten@open-xchange.com

 - Fix for bug 28932: Deal with possible 'NumberFormatException' gracefully
 - Fix for bug 28935: Added null guard when checking which sender source to choose