@@ -49,11 +49,15 @@
 
 package com.openexchange.xml.jdom.impl;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import org.jdom2.Document;
 import org.jdom2.JDOMException;
 import org.jdom2.input.SAXBuilder;
+import org.xml.sax.EntityResolver;
+import org.xml.sax.InputSource;
+import org.xml.sax.SAXException;
 import com.openexchange.xml.jdom.JDOMParser;
 
 /**
@@ -61,8 +65,37 @@ import com.openexchange.xml.jdom.JDOMParser;
  */
 public class JDOMParserImpl implements JDOMParser {
 
+    /**
+     * Empty XML entity resolver to prevent resolving external entitites.
+     */
+    private static final EntityResolver EMPTY_RESOLVER = new EntityResolver() {
+
+        @Override
+        public InputSource resolveEntity(String publicId, String systemId) throws SAXException, IOException {
+            return new InputSource(new ByteArrayInputStream(new byte[0]));
+        }
+    };
+
+    public JDOMParserImpl() {
+        super();
+    }
+
     @Override
     public Document parse(final InputStream is) throws JDOMException, IOException {
-        return null == is ? null : new SAXBuilder().build(is);
+        if (null == is) {
+            return null;
+        }
+        /*
+         * create builder and disable possible unsafe features
+         */
+        SAXBuilder builder = new SAXBuilder();
+        builder.setEntityResolver(EMPTY_RESOLVER);
+        builder.setFeature("http://xml.org/sax/features/external-general-entities", false);
+        builder.setFeature("http://xml.org/sax/features/external-parameter-entities", false);
+        builder.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
+        /*
+         * build
+         */
+        return builder.build(is);
     }
 }
